# cytools

./: .dockerignore  .gitignore  .mailmap  CITATION.cff  CNAME  Dockerfile  INSTALL  INSTALL.md  Makefile  README.md  c.txt  docusaurus.config.js  environment-dev.yml  environment-gnn.yml  environment.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  sidebars.js
.github/workflows/: build-test.yml  deploy.yml  docker.yml  test-build.yml  website.yml
cytools/: __init__.py  calabiyau.py  cone.py  config.py  ksdatabase.py  polytope.py  polytopeface.py  toricvariety.py  triangulation.py  utils.py
demos/: f_theory_uplifts.ipynb
docs/documentation/: config.md  experimental.md  index.md  index.module.css  license.md  produce_doc.py
docs/getting-started/: advanced.md  cluster.md  index.md  linux.md  linuxmacos.md  macos.md  tutorial.md  windows.md
scripts/linux/: cytools  cytools.desktop  install.sh  uninstall.sh
scripts/macos/: AppIcon.icns  CYToolsApp  cytools  info.plist  install.sh  launcher.sh  uninstall.sh
scripts/perf/: weighted_simplex_benchmark.py
scripts/windows/: cytools.bat  fixdockerfile.ps1  install.bat  launcher.ps1  uninstall.bat  update.bat
src/components/HomepageFeatures/: index.js
src/css/: custom.css
src/cytools/: __init__.py  calabiyau.py  cone.py  config.py  polytope.py  polytopeface.py  toricvariety.py  triangulation.py  utils.py
src/cytools/f_theory/: FT_CY.py  Uplift_functions.py  __init__.py
src/cytools/face_triangulations/: __init__.py  face_triangulations.py
src/cytools/h_polytope/: __init__.py  h_polytope.py
src/cytools/helpers/: basic_geometry.py  matrix.py  misc.py
src/cytools/ntfe/: __init__.py  face_triangulations.py  ntfe.py  sample_2d_triangulations.py
src/cytools/vector_config/: __init__.py  fan.py  vectorconfiguration.py
src/pages/: about.md  index.js
static/: CNAME  install.sh
static/files/: tutorial.ipynb
static/js/: mathjax-config.js
tests/: environment.yml  test_calabiyau.py  test_cone.py  test_fan.py  test_gnn_sampler.py  test_hpolytope.py  test_misc.py  test_ntfe_enumeration.py  test_polytope.py  test_polytopeface.py  test_polytopes.py  test_toricvariety.py  test_triangulation.py
unittests/: run_tests.sh  test_all_functions.py  test_compare_cy_to_Sage.py  test_compare_poly_to_Sage.py  test_glsm.py  test_kahler_positivity.py
unittests/data/: cy_data.json
