[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/cytools/__init__.py"
pattern = 'version = "(?P<version>[^"]+)"'

[project]
name = "cytools"
dynamic = ["version"]
description = "A software package for analyzing Calabi-Yau hypersurfaces in toric varieties."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Liam McAllister Group", email = ""}
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "numba",
    "joblib",
    "cvxopt",
    "python-flint",
    "pplpy",
    "ortools==9.15.*",      # bundles HiGHS 1.12; keep matched to highspy below
    "triangulumancer>=0.3",
    "pypalp",
    "cygv>=0.2.3",
    "regfans>=0.1.0",
    "tqdm",
    "qpsolvers",
    "requests",
    "osqp>=1.0",
    "latticepts",
    "platformdirs",
    "highspy==1.12.*",      # must match ortools' bundled HiGHS (SONAME clash)
    "pandas",
    "pyarrow",
    "sympy"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics"
]

[project.optional-dependencies]
test = [
  "pytest"
]
mosek = [
  "Mosek"
]
gnn = [
  "dualgnn"
]

[project.urls]
Homepage = "https://cy.tools"
Documentation = "https://cy.tools/docs/documentation/"
Repository = "https://github.com/LiamMcAllisterGroup/cytools"

[tool.hatch.build.targets.wheel]
packages = ["src/cytools"]

[tool.hatch.build.targets.sdist]
packages = ["src/cytools"]
